User can stop/pause and resume chat #17
